parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    LINECOMMENT
    MULTCOMMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration-list
Rule 2     declaration-list -> declaration-list declaration
Rule 3     declaration-list -> declaration
Rule 4     declaration -> var-declaration
Rule 5     declaration -> fun-declaration
Rule 6     var-declaration -> type-specifier ID SEMICOLON
Rule 7     var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON
Rule 8     type-specifier -> INT
Rule 9     type-specifier -> VOID
Rule 10    fun-declaration -> type-specifier ID LPAREN params RPAREN compound-stmt
Rule 11    params -> param-list
Rule 12    params -> VOID
Rule 13    param-list -> param-list COMMA param
Rule 14    param-list -> param
Rule 15    param -> type-specifier ID
Rule 16    param -> type-specifier ID LSQUAREBRACKET RSQUAREBRACKET
Rule 17    compound-stmt -> LBRACE local-declarations statement-list RBRACE
Rule 18    local-declarations -> local-declarations var-declaration
Rule 19    local-declarations -> empty
Rule 20    statement-list -> statement-list statement
Rule 21    statement-list -> empty
Rule 22    statement -> expression-stmt
Rule 23    statement -> compound-stmt
Rule 24    statement -> selection-stmt
Rule 25    statement -> iteration-stmt
Rule 26    statement -> return-stmt
Rule 27    expression-stmt -> expression SEMICOLON
Rule 28    expression-stmt -> SEMICOLON
Rule 29    selection-stmt -> IF LPAREN expression RPAREN statement
Rule 30    selection-stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 31    iteration-stmt -> WHILE LPAREN expression RPAREN statement
Rule 32    return-stmt -> RETURN SEMICOLON
Rule 33    return-stmt -> RETURN expression SEMICOLON
Rule 34    expression -> var ASSIGN expression
Rule 35    expression -> simple-expression
Rule 36    var -> ID
Rule 37    var -> ID LSQUAREBRACKET expression RSQUAREBRACKET
Rule 38    simple-expression -> additive-expression relop additive-expression
Rule 39    simple-expression -> additive-expression
Rule 40    relop -> MUCHSMALLER
Rule 41    relop -> LESS
Rule 42    relop -> GREATER
Rule 43    relop -> MUCHGREATER
Rule 44    relop -> EQUAL
Rule 45    relop -> UNEQUAL
Rule 46    additive-expression -> additive-expression addop term
Rule 47    additive-expression -> term
Rule 48    addop -> PLUS
Rule 49    addop -> MINUS
Rule 50    term -> term mulop factor
Rule 51    term -> factor
Rule 52    mulop -> TIMES
Rule 53    mulop -> DIVIDE
Rule 54    factor -> LPAREN expression RPAREN
Rule 55    factor -> var
Rule 56    factor -> call
Rule 57    factor -> NUM
Rule 58    call -> ID LPAREN args RPAREN
Rule 59    args -> arg-list
Rule 60    args -> empty
Rule 61    arg-list -> arg-list COMMA expression
Rule 62    arg-list -> expression
Rule 63    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 34
COMMA                : 13 61
DIVIDE               : 53
ELSE                 : 30
EQUAL                : 44
GREATER              : 42
ID                   : 6 7 10 15 16 36 37 58
IF                   : 29 30
INT                  : 8
LBRACE               : 17
LESS                 : 41
LINECOMMENT          : 
LPAREN               : 10 29 30 31 54 58
LSQUAREBRACKET       : 7 16 37
MINUS                : 49
MUCHGREATER          : 43
MUCHSMALLER          : 40
MULTCOMMMENT         : 
NUM                  : 7 57
PLUS                 : 48
RBRACE               : 17
RETURN               : 32 33
RPAREN               : 10 29 30 31 54 58
RSQUAREBRACKET       : 7 16 37
SEMICOLON            : 6 7 27 28 32 33
TIMES                : 52
UNEQUAL              : 45
VOID                 : 9 12
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

additive-expression  : 38 38 39 46
addop                : 46
arg-list             : 59 61
args                 : 58
call                 : 56
compound-stmt        : 10 23
declaration          : 2 3
declaration-list     : 1 2
empty                : 19 21 60
expression           : 27 29 30 31 33 34 37 54 61 62
expression-stmt      : 22
factor               : 50 51
fun-declaration      : 5
iteration-stmt       : 25
local-declarations   : 17 18
mulop                : 50
param                : 13 14
param-list           : 11 13
params               : 10
program              : 0
relop                : 38
return-stmt          : 26
selection-stmt       : 24
simple-expression    : 35
statement            : 20 29 30 30 31
statement-list       : 17 20
term                 : 46 47 50
type-specifier       : 6 7 10 15 16
var                  : 34 55
var-declaration      : 4 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration-list
    (2) declaration-list -> . declaration-list declaration
    (3) declaration-list -> . declaration
    (4) declaration -> . var-declaration
    (5) declaration -> . fun-declaration
    (6) var-declaration -> . type-specifier ID SEMICOLON
    (7) var-declaration -> . type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON
    (10) fun-declaration -> . type-specifier ID LPAREN params RPAREN compound-stmt
    (8) type-specifier -> . INT
    (9) type-specifier -> . VOID

    INT             shift and go to state 1
    VOID            shift and go to state 2

    fun-declaration                shift and go to state 3
    declaration-list               shift and go to state 4
    program                        shift and go to state 5
    declaration                    shift and go to state 6
    type-specifier                 shift and go to state 7
    var-declaration                shift and go to state 8

state 1

    (8) type-specifier -> INT .

    ID              reduce using rule 8 (type-specifier -> INT .)


state 2

    (9) type-specifier -> VOID .

    ID              reduce using rule 9 (type-specifier -> VOID .)


state 3

    (5) declaration -> fun-declaration .

    INT             reduce using rule 5 (declaration -> fun-declaration .)
    VOID            reduce using rule 5 (declaration -> fun-declaration .)
    $end            reduce using rule 5 (declaration -> fun-declaration .)


state 4

    (1) program -> declaration-list .
    (2) declaration-list -> declaration-list . declaration
    (4) declaration -> . var-declaration
    (5) declaration -> . fun-declaration
    (6) var-declaration -> . type-specifier ID SEMICOLON
    (7) var-declaration -> . type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON
    (10) fun-declaration -> . type-specifier ID LPAREN params RPAREN compound-stmt
    (8) type-specifier -> . INT
    (9) type-specifier -> . VOID

    $end            reduce using rule 1 (program -> declaration-list .)
    INT             shift and go to state 1
    VOID            shift and go to state 2

    fun-declaration                shift and go to state 3
    declaration                    shift and go to state 9
    type-specifier                 shift and go to state 7
    var-declaration                shift and go to state 8

state 5

    (0) S' -> program .



state 6

    (3) declaration-list -> declaration .

    INT             reduce using rule 3 (declaration-list -> declaration .)
    VOID            reduce using rule 3 (declaration-list -> declaration .)
    $end            reduce using rule 3 (declaration-list -> declaration .)


state 7

    (6) var-declaration -> type-specifier . ID SEMICOLON
    (7) var-declaration -> type-specifier . ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON
    (10) fun-declaration -> type-specifier . ID LPAREN params RPAREN compound-stmt

    ID              shift and go to state 10


state 8

    (4) declaration -> var-declaration .

    INT             reduce using rule 4 (declaration -> var-declaration .)
    VOID            reduce using rule 4 (declaration -> var-declaration .)
    $end            reduce using rule 4 (declaration -> var-declaration .)


state 9

    (2) declaration-list -> declaration-list declaration .

    INT             reduce using rule 2 (declaration-list -> declaration-list declaration .)
    VOID            reduce using rule 2 (declaration-list -> declaration-list declaration .)
    $end            reduce using rule 2 (declaration-list -> declaration-list declaration .)


state 10

    (6) var-declaration -> type-specifier ID . SEMICOLON
    (7) var-declaration -> type-specifier ID . LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON
    (10) fun-declaration -> type-specifier ID . LPAREN params RPAREN compound-stmt

    SEMICOLON       shift and go to state 12
    LSQUAREBRACKET  shift and go to state 11
    LPAREN          shift and go to state 13


state 11

    (7) var-declaration -> type-specifier ID LSQUAREBRACKET . NUM RSQUAREBRACKET SEMICOLON

    NUM             shift and go to state 14


state 12

    (6) var-declaration -> type-specifier ID SEMICOLON .

    INT             reduce using rule 6 (var-declaration -> type-specifier ID SEMICOLON .)
    VOID            reduce using rule 6 (var-declaration -> type-specifier ID SEMICOLON .)
    $end            reduce using rule 6 (var-declaration -> type-specifier ID SEMICOLON .)
    RBRACE          reduce using rule 6 (var-declaration -> type-specifier ID SEMICOLON .)
    SEMICOLON       reduce using rule 6 (var-declaration -> type-specifier ID SEMICOLON .)
    LBRACE          reduce using rule 6 (var-declaration -> type-specifier ID SEMICOLON .)
    IF              reduce using rule 6 (var-declaration -> type-specifier ID SEMICOLON .)
    WHILE           reduce using rule 6 (var-declaration -> type-specifier ID SEMICOLON .)
    RETURN          reduce using rule 6 (var-declaration -> type-specifier ID SEMICOLON .)
    ID              reduce using rule 6 (var-declaration -> type-specifier ID SEMICOLON .)
    LPAREN          reduce using rule 6 (var-declaration -> type-specifier ID SEMICOLON .)
    NUM             reduce using rule 6 (var-declaration -> type-specifier ID SEMICOLON .)


state 13

    (10) fun-declaration -> type-specifier ID LPAREN . params RPAREN compound-stmt
    (11) params -> . param-list
    (12) params -> . VOID
    (13) param-list -> . param-list COMMA param
    (14) param-list -> . param
    (15) param -> . type-specifier ID
    (16) param -> . type-specifier ID LSQUAREBRACKET RSQUAREBRACKET
    (8) type-specifier -> . INT
    (9) type-specifier -> . VOID

    VOID            shift and go to state 15
    INT             shift and go to state 1

    type-specifier                 shift and go to state 18
    params                         shift and go to state 17
    param                          shift and go to state 16
    param-list                     shift and go to state 19

state 14

    (7) var-declaration -> type-specifier ID LSQUAREBRACKET NUM . RSQUAREBRACKET SEMICOLON

    RSQUAREBRACKET  shift and go to state 20


state 15

    (12) params -> VOID .
    (9) type-specifier -> VOID .

    RPAREN          reduce using rule 12 (params -> VOID .)
    ID              reduce using rule 9 (type-specifier -> VOID .)


state 16

    (14) param-list -> param .

    COMMA           reduce using rule 14 (param-list -> param .)
    RPAREN          reduce using rule 14 (param-list -> param .)


state 17

    (10) fun-declaration -> type-specifier ID LPAREN params . RPAREN compound-stmt

    RPAREN          shift and go to state 21


state 18

    (15) param -> type-specifier . ID
    (16) param -> type-specifier . ID LSQUAREBRACKET RSQUAREBRACKET

    ID              shift and go to state 22


state 19

    (11) params -> param-list .
    (13) param-list -> param-list . COMMA param

    RPAREN          reduce using rule 11 (params -> param-list .)
    COMMA           shift and go to state 23


state 20

    (7) var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 24


state 21

    (10) fun-declaration -> type-specifier ID LPAREN params RPAREN . compound-stmt
    (17) compound-stmt -> . LBRACE local-declarations statement-list RBRACE

    LBRACE          shift and go to state 25

    compound-stmt                  shift and go to state 26

state 22

    (15) param -> type-specifier ID .
    (16) param -> type-specifier ID . LSQUAREBRACKET RSQUAREBRACKET

    COMMA           reduce using rule 15 (param -> type-specifier ID .)
    RPAREN          reduce using rule 15 (param -> type-specifier ID .)
    LSQUAREBRACKET  shift and go to state 27


state 23

    (13) param-list -> param-list COMMA . param
    (15) param -> . type-specifier ID
    (16) param -> . type-specifier ID LSQUAREBRACKET RSQUAREBRACKET
    (8) type-specifier -> . INT
    (9) type-specifier -> . VOID

    INT             shift and go to state 1
    VOID            shift and go to state 2

    type-specifier                 shift and go to state 18
    param                          shift and go to state 28

state 24

    (7) var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .

    INT             reduce using rule 7 (var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .)
    VOID            reduce using rule 7 (var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .)
    $end            reduce using rule 7 (var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .)
    RBRACE          reduce using rule 7 (var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .)
    SEMICOLON       reduce using rule 7 (var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .)
    LBRACE          reduce using rule 7 (var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .)
    IF              reduce using rule 7 (var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .)
    WHILE           reduce using rule 7 (var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .)
    RETURN          reduce using rule 7 (var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .)
    ID              reduce using rule 7 (var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .)
    LPAREN          reduce using rule 7 (var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .)
    NUM             reduce using rule 7 (var-declaration -> type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON .)


state 25

    (17) compound-stmt -> LBRACE . local-declarations statement-list RBRACE
    (18) local-declarations -> . local-declarations var-declaration
    (19) local-declarations -> . empty
    (63) empty -> .

    INT             reduce using rule 63 (empty -> .)
    VOID            reduce using rule 63 (empty -> .)
    RBRACE          reduce using rule 63 (empty -> .)
    SEMICOLON       reduce using rule 63 (empty -> .)
    LBRACE          reduce using rule 63 (empty -> .)
    IF              reduce using rule 63 (empty -> .)
    WHILE           reduce using rule 63 (empty -> .)
    RETURN          reduce using rule 63 (empty -> .)
    ID              reduce using rule 63 (empty -> .)
    LPAREN          reduce using rule 63 (empty -> .)
    NUM             reduce using rule 63 (empty -> .)

    local-declarations             shift and go to state 29
    empty                          shift and go to state 30

state 26

    (10) fun-declaration -> type-specifier ID LPAREN params RPAREN compound-stmt .

    INT             reduce using rule 10 (fun-declaration -> type-specifier ID LPAREN params RPAREN compound-stmt .)
    VOID            reduce using rule 10 (fun-declaration -> type-specifier ID LPAREN params RPAREN compound-stmt .)
    $end            reduce using rule 10 (fun-declaration -> type-specifier ID LPAREN params RPAREN compound-stmt .)


state 27

    (16) param -> type-specifier ID LSQUAREBRACKET . RSQUAREBRACKET

    RSQUAREBRACKET  shift and go to state 31


state 28

    (13) param-list -> param-list COMMA param .

    COMMA           reduce using rule 13 (param-list -> param-list COMMA param .)
    RPAREN          reduce using rule 13 (param-list -> param-list COMMA param .)


state 29

    (17) compound-stmt -> LBRACE local-declarations . statement-list RBRACE
    (18) local-declarations -> local-declarations . var-declaration
    (20) statement-list -> . statement-list statement
    (21) statement-list -> . empty
    (6) var-declaration -> . type-specifier ID SEMICOLON
    (7) var-declaration -> . type-specifier ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON
    (63) empty -> .
    (8) type-specifier -> . INT
    (9) type-specifier -> . VOID

    RBRACE          reduce using rule 63 (empty -> .)
    SEMICOLON       reduce using rule 63 (empty -> .)
    LBRACE          reduce using rule 63 (empty -> .)
    IF              reduce using rule 63 (empty -> .)
    WHILE           reduce using rule 63 (empty -> .)
    RETURN          reduce using rule 63 (empty -> .)
    ID              reduce using rule 63 (empty -> .)
    LPAREN          reduce using rule 63 (empty -> .)
    NUM             reduce using rule 63 (empty -> .)
    INT             shift and go to state 1
    VOID            shift and go to state 2

    statement-list                 shift and go to state 32
    var-declaration                shift and go to state 33
    type-specifier                 shift and go to state 34
    empty                          shift and go to state 35

state 30

    (19) local-declarations -> empty .

    INT             reduce using rule 19 (local-declarations -> empty .)
    VOID            reduce using rule 19 (local-declarations -> empty .)
    RBRACE          reduce using rule 19 (local-declarations -> empty .)
    SEMICOLON       reduce using rule 19 (local-declarations -> empty .)
    LBRACE          reduce using rule 19 (local-declarations -> empty .)
    IF              reduce using rule 19 (local-declarations -> empty .)
    WHILE           reduce using rule 19 (local-declarations -> empty .)
    RETURN          reduce using rule 19 (local-declarations -> empty .)
    ID              reduce using rule 19 (local-declarations -> empty .)
    LPAREN          reduce using rule 19 (local-declarations -> empty .)
    NUM             reduce using rule 19 (local-declarations -> empty .)


state 31

    (16) param -> type-specifier ID LSQUAREBRACKET RSQUAREBRACKET .

    COMMA           reduce using rule 16 (param -> type-specifier ID LSQUAREBRACKET RSQUAREBRACKET .)
    RPAREN          reduce using rule 16 (param -> type-specifier ID LSQUAREBRACKET RSQUAREBRACKET .)


state 32

    (17) compound-stmt -> LBRACE local-declarations statement-list . RBRACE
    (20) statement-list -> statement-list . statement
    (22) statement -> . expression-stmt
    (23) statement -> . compound-stmt
    (24) statement -> . selection-stmt
    (25) statement -> . iteration-stmt
    (26) statement -> . return-stmt
    (27) expression-stmt -> . expression SEMICOLON
    (28) expression-stmt -> . SEMICOLON
    (17) compound-stmt -> . LBRACE local-declarations statement-list RBRACE
    (29) selection-stmt -> . IF LPAREN expression RPAREN statement
    (30) selection-stmt -> . IF LPAREN expression RPAREN statement ELSE statement
    (31) iteration-stmt -> . WHILE LPAREN expression RPAREN statement
    (32) return-stmt -> . RETURN SEMICOLON
    (33) return-stmt -> . RETURN expression SEMICOLON
    (34) expression -> . var ASSIGN expression
    (35) expression -> . simple-expression
    (36) var -> . ID
    (37) var -> . ID LSQUAREBRACKET expression RSQUAREBRACKET
    (38) simple-expression -> . additive-expression relop additive-expression
    (39) simple-expression -> . additive-expression
    (46) additive-expression -> . additive-expression addop term
    (47) additive-expression -> . term
    (50) term -> . term mulop factor
    (51) term -> . factor
    (54) factor -> . LPAREN expression RPAREN
    (55) factor -> . var
    (56) factor -> . call
    (57) factor -> . NUM
    (58) call -> . ID LPAREN args RPAREN

    RBRACE          shift and go to state 46
    SEMICOLON       shift and go to state 40
    LBRACE          shift and go to state 25
    IF              shift and go to state 52
    WHILE           shift and go to state 37
    RETURN          shift and go to state 36
    ID              shift and go to state 51
    LPAREN          shift and go to state 49
    NUM             shift and go to state 41

    term                           shift and go to state 53
    selection-stmt                 shift and go to state 48
    additive-expression            shift and go to state 38
    factor                         shift and go to state 44
    expression-stmt                shift and go to state 47
    simple-expression              shift and go to state 54
    call                           shift and go to state 42
    return-stmt                    shift and go to state 39
    statement                      shift and go to state 43
    compound-stmt                  shift and go to state 50
    var                            shift and go to state 45
    expression                     shift and go to state 55
    iteration-stmt                 shift and go to state 56

state 33

    (18) local-declarations -> local-declarations var-declaration .

    INT             reduce using rule 18 (local-declarations -> local-declarations var-declaration .)
    VOID            reduce using rule 18 (local-declarations -> local-declarations var-declaration .)
    RBRACE          reduce using rule 18 (local-declarations -> local-declarations var-declaration .)
    SEMICOLON       reduce using rule 18 (local-declarations -> local-declarations var-declaration .)
    LBRACE          reduce using rule 18 (local-declarations -> local-declarations var-declaration .)
    IF              reduce using rule 18 (local-declarations -> local-declarations var-declaration .)
    WHILE           reduce using rule 18 (local-declarations -> local-declarations var-declaration .)
    RETURN          reduce using rule 18 (local-declarations -> local-declarations var-declaration .)
    ID              reduce using rule 18 (local-declarations -> local-declarations var-declaration .)
    LPAREN          reduce using rule 18 (local-declarations -> local-declarations var-declaration .)
    NUM             reduce using rule 18 (local-declarations -> local-declarations var-declaration .)


state 34

    (6) var-declaration -> type-specifier . ID SEMICOLON
    (7) var-declaration -> type-specifier . ID LSQUAREBRACKET NUM RSQUAREBRACKET SEMICOLON

    ID              shift and go to state 57


state 35

    (21) statement-list -> empty .

    RBRACE          reduce using rule 21 (statement-list -> empty .)
    SEMICOLON       reduce using rule 21 (statement-list -> empty .)
    LBRACE          reduce using rule 21 (statement-list -> empty .)
    IF              reduce using rule 21 (statement-list -> empty .)
    WHILE           reduce using rule 21 (statement-list -> empty .)
    RETURN          reduce using rule 21 (statement-list -> empty .)
    ID              reduce using rule 21 (statement-list -> empty .)
    LPAREN          reduce using rule 21 (statement-list -> empty .)
    NUM             reduce using rule 21 (statement-list -> empty .)


state 36

    (32) return-stmt -> RETURN . SEMICOLON
    (33) return-stmt -> RETURN . expression SEMICOLON
    (34) expression -> . var ASSIGN expression
    (35) expression -> . simple-expression
    (36) var -> . ID
    (37) var -> . ID LSQUAREBRACKET expression RSQUAREBRACKET
    (38) simple-expression -> . additive-expression relop additive-expression
    (39) simple-expression -> . additive-expression
    (46) additive-expression -> . additive-expression addop term
    (47) additive-expression -> . term
    (50) term -> . term mulop factor
    (51) term -> . factor
    (54) factor -> . LPAREN expression RPAREN
    (55) factor -> . var
    (56) factor -> . call
    (57) factor -> . NUM
    (58) call -> . ID LPAREN args RPAREN

    SEMICOLON       shift and go to state 58
    ID              shift and go to state 51
    LPAREN          shift and go to state 49
    NUM             shift and go to state 41

    term                           shift and go to state 53
    expression                     shift and go to state 59
    simple-expression              shift and go to state 54
    call                           shift and go to state 42
    factor                         shift and go to state 44
    var                            shift and go to state 45
    additive-expression            shift and go to state 38

state 37
